cli/tests/snapshots/cli__run_images@overlay_offset3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/overlay_offset3.py
---
<svg width="86.0" height="86.0" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 73.0 56.0 A 30.0 30.0 0.0 0 1 13.0 56.0 A 30.0 30.0 0.0 0 1 73.0 56.0 Z" fill="rgba(200, 0, 0, 0.5)" />
    <g>
      <path d="M 86.0 30.0 A 30.0 30.0 0.0 0 1 26.0 30.0 A 30.0 30.0 0.0 0 1 86.0 30.0 Z" fill="rgba(0, 0, 255, 0.5)" />
      <path d="M 60.0 30.0 A 30.0 30.0 0.0 0 1 0.0 30.0 A 30.0 30.0 0.0 0 1 60.0 30.0 Z" fill="rgba(0, 150, 0, 0.5)" />
    </g>
  </g>
</svg>
