cli/tests/snapshots/cli__run_images@place_curve1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/place_curve1.py
---
<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0" y="0" width="100" height="100" transform="rotate(0 50 50)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <defs><clipPath id="clip1" ><rect x="0" y="0" width="100" height="100" transform="rotate(0 50 50)" /></clipPath></defs>
      <g clip-path="url(#clip1)" >
        <path d="M 0 0 L 100 0 L 100 100 L 0 100 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-width="2" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
      </g>
      <path d="M 10.5 50.5 C 10.5 10.5 90.5 90.5 90.5 50.5" fill="none" stroke="rgba(0, 0, 255, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
    </g>
  </g>
</svg>
