cli/tests/snapshots/cli__run_images@place_image1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/place_image1.py
---
<svg width="48" height="48" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0" y="0" width="48" height="48" transform="rotate(0 24 24)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <path d="M 0 0 L 48 0 L 48 48 L 0 48 Z" fill="rgba(211, 211, 211, 1.0)" />
      <path d="M 24 10.143594 L 40 37.856406 L 8 37.856406 Z" fill="rgba(255, 0, 0, 1.0)" />
    </g>
  </g>
</svg>
